# seylan-hub

./: .gitignore  .mergify.yml  AGENTS.md  CURSOR_AGENT_TASKS.md  DEPLOYMENT.md  README.md  speaking-notes.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  README.md  fly.toml  requirements.txt  supabase_schema.sql
backend/agents/seylan-status/: AgentCard.json  Dockerfile  docker-compose.yml  fly.toml  pyproject.toml
backend/agents/seylan-status/src/: main.py
backend/app/: config.py  main.py
backend/fixtures/: account_context.json  business_account.json  family_wallet.json  loans.json  pl_summary.json
backend/scripts/: banking_mcp_stdio.py  fly-secrets-mpgs.sh  smoke.sh
backend/tests/: test_banking_tools.py  test_checksum.py  test_mpgs.py  test_routes.py
demo-recording/: .gitignore  package-lock.json  package.json  playwright.config.ts
demo-recording/scripts/: short-record.mjs
demo-recording/tests/: helpers.ts  seylan-hub-demo.spec.ts
docs/: MCP.md  cursor-mcp.example.json  seylan-hub-api-mapping.md  seylan-stakeholder-brief.md
frontend/: .cursorrules  .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/lib/: api.ts  (+10 more)
hooks/: hooks.json
plans/: CEYFI_MASTER_PLAN.md  CEYFI_V2_PLAN.md  Ovindu-Frontend-Plan.md  Suven-Backend-Plan.md  seylan_client.py  seylan_router_integration.py
status-site/: .env.example  package-lock.json  package.json  vercel.json
(+168 files in other folders)
