[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "seylan-status-agent"
version = "1.0.0"
description = "SeylanHub backend status monitor — Nasiko agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
